[KRJMR001] User Application - register , fetch with status history and update status
